infrastructure/base/n8n/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: n8n
    app.kubernetes.io/part-of: <YOUR-ORGANIZATION-HERE>
    app.kubernetes.io/managed-by: kustomize
    pod-security.kubernetes.io/enforce: baseline
